# dkpy

./: .readthedocs.yaml  CITATION.cff  README.md  README.rst  conftest.py  pyproject.toml  requirements-rtd.txt  requirements.txt  rtd-environment.yaml  test.py  test_diagonal.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-formatting.yml  check-version.yml  test-package.yml
doc/: conf.py  dkpy.rst  examples.rst  references.rst
examples/: 1_example_dk_iter_fixed_order.py  2_example_dk_iter_list_order.py  3_example_dk_iter_auto_order.py  3_example_dk_iter_custom.py  3_example_dk_iter_order_callback.py  4_example_dk_iter_auto_order.py  4_example_dk_iter_custom.py  4_example_dk_iter_interactive.py  5_example_dk_iteration_custom.py  6_dk_iteration_airframe.py  6_dk_iteration_non_square_perturbation.py  7_uncertainty_characterization.py  8_aircraft_actuator_uncertainty_characterization.py  dk_iteration_fixed_order.py
src/dkpy/: __init__.py  controller_synthesis.py  d_scale_fit.py  dk_iteration.py  exceptions.py  fit_transfer_functions.py  lti_system_fit.py  plotting.py  structured_singular_value.py  uncertainty_bound.py  uncertainty_characterization.py  uncertainty_structure.py  utilities.py
tests/: test_controller_synthesis.py  test_d_scale_fit.py  test_dk_iteration.py  test_fit_transfer_functions.py  test_structured_singular_value.py  test_uncertainty_bound.py  test_uncertainty_characterization.py  test_uncertainty_structure.py  test_utilities.py
(+37 files in other folders)
