[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dkpy"
version = "0.1.0"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "control>=0.10.0",
    "slycot>=0.6.0",
]
requires-python = ">=3.7, <3.13"
authors = [
  {name="Steven Dahdah", email="steven.dahdah@mail.mcgill.ca"},
  {name="James Richard Forbes", email="james.richard.forbes@mcgill.ca"},
]
description = "D-K iteration in Python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/decargroup/dkpy"
Issues = "https://github.com/decargroup/dkpy/issues"

[project.optional-dependencies]
solvers = ["mosek>=9.2.49"]
